// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Bridge routes should render correctly when not in progress and no error 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL sc-eCImPb bXyKXZ czizOc"
    type="3xl"
  >
    <div
      class="sc-bdvvtL sc-jRQBWg fGXmcv hJXOBd"
      style="width: 100%;"
    >
      <div
        aria-expanded="true"
        aria-label="open accordion"
        class="sc-iqseJM eIsPzL"
        role="button"
        tabindex="0"
      >
        <div
          class="sc-fotOHu iFOERY sc-bkkeKt gzjLNt"
        >
          <div
            class="sc-fotOHu bnkEsk"
          >
            <div
              class="sc-fotOHu fbDECk"
            >
              <label
                class="sc-hBUSln jgfghP"
                style="width: 100%; text-align: left;"
              >
                available-routes
              </label>
              <div
                class="sc-fFeiMQ iJaGUG"
              >
                2
              </div>
            </div>
            <svg
              class="sc-dJjYzT glBFcR"
              color="#FFFFFF"
              data-icon="cutArrowDown"
              height="2.4rem"
              isopen="1"
              style="margin-left: 1.7rem;"
              width="2.4rem"
            >
              cut-arrow-down.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="rah-animating rah-animating--down rah-animating--to-height-auto"
        style="width: 100%; height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
      >
        <div
          style=""
        >
          <div
            class="sc-ieecCq crfbYk"
          >
            <div
              id="route-8"
              style="width: 100%; margin-bottom: 1.2rem;"
            >
              <div
                aria-expanded="false"
                aria-label="select route"
                class="sc-iqseJM bzJIfm sc-crHmcD gYEbqi"
                role="button"
                tabindex="0"
              >
                <div
                  class="sc-bdvvtL sc-jRQBWg fGXmcv fQFNvP sc-egiyK eqEoBy"
                >
                  <div
                    class="sc-gKclnd konHGI"
                  >
                    <div
                      class="sc-iCfMLu gYGgwA"
                    >
                      <svg
                        class="amount__icon"
                        color="#FFFFFF"
                        data-icon="usdcCoin"
                        height="3.2rem"
                        width="2.8rem"
                      >
                        usdc.svg
                      </svg>
                      <span
                        class="amount__number"
                      >
                        1
                      </span>
                    </div>
                    <div
                      class="sc-furwcr fhgROL"
                    >
                      <svg
                        class="arrow__icon"
                        color="#FFFFFF"
                        data-icon="doubleArrowRight"
                        height="1.8rem"
                        width="2.1rem"
                      >
                        double-arrow-right.svg
                      </svg>
                    </div>
                    <div
                      class="sc-pVTFL qWzKy"
                    >
                      <svg
                        class="chain__icon chain__icon--sm"
                        color="#FFFFFF"
                        data-icon="hopBridge"
                        height="2.6rem"
                        width="2.6rem"
                      >
                        hop.svg
                      </svg>
                      <p
                        class="chain__name"
                      >
                        Hop Goerli
                      </p>
                      <div
                        class="chain__group"
                      >
                        <span>
                          <svg
                            class="network__icon"
                            color="#FFFFFF"
                            data-icon="hopBridge"
                            height="2.6rem"
                            width="2.6rem"
                          >
                            hop.svg
                          </svg>
                        </span>
                        <span>
                          Hop Goerli
                        </span>
                      </div>
                    </div>
                    <div
                      class="sc-furwcr fhgROL"
                    >
                      <svg
                        class="arrow__icon"
                        color="#FFFFFF"
                        data-icon="doubleArrowRight"
                        height="1.8rem"
                        width="2.1rem"
                      >
                        double-arrow-right.svg
                      </svg>
                    </div>
                    <div
                      class="sc-iCfMLu fRazBy"
                    >
                      <svg
                        class="amount__icon"
                        color="#FFFFFF"
                        data-icon="usdcCoin"
                        height="3.2rem"
                        width="2.8rem"
                      >
                        usdc.svg
                      </svg>
                      <span
                        class="amount__number"
                      >
                        1.0
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-bdvvtL sc-jRQBWg fGXmcv dQnGwA"
                  >
                    <p
                      class="sc-bqiRlB kMHECB"
                      data-testid="route-fees"
                    >
                      gas-fee : ~$0.61 | ~5 min
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              id="route-6"
              style="width: 100%; margin-bottom: 1.2rem;"
            >
              <div
                aria-expanded="false"
                aria-label="select route"
                class="sc-iqseJM bzJIfm sc-crHmcD gYEbqi"
                role="button"
                tabindex="0"
              >
                <div
                  class="sc-bdvvtL sc-jRQBWg fGXmcv fQFNvP sc-egiyK ixpTqd"
                >
                  <div
                    class="sc-gKclnd konHGI"
                  >
                    <div
                      class="sc-iCfMLu gYGgwA"
                    >
                      <svg
                        class="amount__icon"
                        color="#FFFFFF"
                        data-icon="usdcCoin"
                        height="3.2rem"
                        width="2.8rem"
                      >
                        usdc.svg
                      </svg>
                      <span
                        class="amount__number"
                      >
                        1
                      </span>
                    </div>
                    <div
                      class="sc-furwcr fhgROL"
                    >
                      <svg
                        class="arrow__icon"
                        color="#FFFFFF"
                        data-icon="doubleArrowRight"
                        height="1.8rem"
                        width="2.1rem"
                      >
                        double-arrow-right.svg
                      </svg>
                    </div>
                    <div
                      class="sc-pVTFL qWzKy"
                    >
                      <svg
                        class="chain__icon chain__icon--sm"
                        color="#FFFFFF"
                        data-icon="polygonBridge"
                        height="2.6rem"
                        width="2.6rem"
                      >
                        polygon.svg
                      </svg>
                      <p
                        class="chain__name"
                      >
                        Polygon POS Goerli
                      </p>
                      <div
                        class="chain__group"
                      >
                        <span>
                          <svg
                            class="network__icon"
                            color="#FFFFFF"
                            data-icon="polygonBridge"
                            height="2.6rem"
                            width="2.6rem"
                          >
                            polygon.svg
                          </svg>
                        </span>
                        <span>
                          Polygon POS Goerli
                        </span>
                      </div>
                    </div>
                    <div
                      class="sc-furwcr fhgROL"
                    >
                      <svg
                        class="arrow__icon"
                        color="#FFFFFF"
                        data-icon="doubleArrowRight"
                        height="1.8rem"
                        width="2.1rem"
                      >
                        double-arrow-right.svg
                      </svg>
                    </div>
                    <div
                      class="sc-iCfMLu fRazBy"
                    >
                      <svg
                        class="amount__icon"
                        color="#FFFFFF"
                        data-icon="usdcCoin"
                        height="3.2rem"
                        width="2.8rem"
                      >
                        usdc.svg
                      </svg>
                      <span
                        class="amount__number"
                      >
                        1.0
                      </span>
                    </div>
                  </div>
                  <div
                    class="sc-bdvvtL sc-jRQBWg fGXmcv dQnGwA"
                  >
                    <p
                      class="sc-bqiRlB kMHECB"
                      data-testid="route-fees"
                    >
                      gas-fee : ~$0.63 | ~30 min
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`The Bridge routes should render the skeleton when in progress 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL sc-eCImPb bXyKXZ czizOc"
    type="3xl"
  >
    <div
      class="sc-bdvvtL sc-jRQBWg fGXmcv hJXOBd"
      style="width: 100%;"
    >
      <div
        aria-expanded="true"
        aria-label="open accordion"
        class="sc-iqseJM eIsPzL"
        role="button"
        tabindex="0"
      >
        <div
          class="sc-fotOHu iFOERY sc-bkkeKt gzjLNt"
        >
          <div
            class="sc-fotOHu bnkEsk"
          >
            <div
              class="sc-fotOHu fbDECk"
            >
              <label
                class="sc-hBUSln jgfghP"
                style="width: 100%; text-align: left;"
              >
                available-routes
              </label>
              <div
                class="sc-fFeiMQ iJaGUG"
              >
                2
              </div>
            </div>
            <svg
              class="sc-dJjYzT glBFcR"
              color="#FFFFFF"
              data-icon="cutArrowDown"
              height="2.4rem"
              isopen="1"
              style="margin-left: 1.7rem;"
              width="2.4rem"
            >
              cut-arrow-down.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="rah-animating rah-animating--down rah-animating--to-height-auto"
        style="width: 100%; height: 0px; overflow: hidden; transition: height 500ms ease 0ms;"
      >
        <div
          style=""
        >
          <div
            class="sc-ieecCq crfbYk"
          >
            <div
              class="sc-ksdxgE jNGrHQ rectangle-skeleton"
              height="10rem"
              style="margin-bottom: 1rem;"
            />
            <div
              class="sc-ksdxgE jNGrHQ rectangle-skeleton"
              height="10rem"
              style="margin-bottom: 1rem;"
            />
            <div
              class="sc-ksdxgE jNGrHQ rectangle-skeleton"
              height="10rem"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
